# python-2048

./: .gitignore  CMakeLists.txt  README.md  ai.py  package.xml  run.cpp  run.py  tweet.py
board/: board.cpp  board.hpp
config/: params.cpp  params.hpp
game/: game.cpp  game.hpp
test/: flush.cpp  random.cpp
util/: math.hpp  random.hpp
