<?xml version="1.0"?>
<package format="2">
  <name>game_2048</name>
  <version>0.0.0</version>
  <description>The 2048 game interface</description>

  <maintainer email="m-hattori@jsk.imi.i.u-tokyo.ac.jp">Mirai Hattori</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pybind11_catkin</depend>

</package>
